Change Ecommerce scheduled job to import data into GA
This changes the existing ecommerce job to use a new rake
task analytics:export_indexed_pages_to_google_analytics.

This exports data from production Search API indices and
imports it into Google Analytics.

This also runs the scheduled job in production, as we only
want production data being imported into GA. But the job
can still be run in integration, so this keeps it there
for testing purposes (but without a cron schedule).

Trello: https://trello.com/c/xJP8a5KE/905

--- a/modules/govuk_jenkins/templates/jobs/enhanced_ecommerce.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/enhanced_ecommerce.yaml.erb
@@ -15,13 +15,7 @@
             predefined-parameters: |
               TARGET_APPLICATION=<%= @target_application %>
               MACHINE_CLASS=search
-              RAKE_TASK="analytics:create_data_import_csv[/data/export/enhanced_ecommerce]"
-          - project: run-rake-task
-            block: true
-            predefined-parameters: |
-              TARGET_APPLICATION=<%= @target_application %>
-              MACHINE_CLASS=search
-              RAKE_TASK="analytics:delete_old_files[/data/export/enhanced_ecommerce,10]"
+              RAKE_TASK=analytics:export_indexed_pages_to_google_analytics
     triggers:
         - timed: '<%= @cron_schedule %>'
     publishers:
