--- a/modules/govuk_jenkins/templates/jobs/copy_data_to_staging.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_to_staging.yaml.erb
@@ -101,14 +101,14 @@
             choices:
                 - all
                 - assets
+                - attachments
                 - content-publisher
                 - mongo-api
-                - mongo-exceptions
                 - mongo-licensify
                 - mongo-normal
                 - mongo-pp
-                - mongo-router
                 - mysql-normal
                 - mysql-whitehall
                 - postgresql-backend
                 - postgresql-transition
+                - support-api-csvs
