Safelist package search after PII data is removed
After this has deployed - https://github.com/alphagov/ckanext-datagovuk/pull/197

--- a/modules/govuk/templates/ckan/nginx.conf.erb
+++ b/modules/govuk/templates/ckan/nginx.conf.erb
@@ -36,6 +36,18 @@ location /api/action/package_list {
   try_files $uri @app;
 }
 
+# Additional endpoints requested by users
+
+location /api/action/package_search {
+  try_files $uri @app;
+}
+
+location /api/3/action/package_search {
+  try_files $uri @app;
+}
+
+# CSW endpoint
+
 location /csw {
   <%- if @protected -%>
   deny all;
