--- a/modules/router/templates/router_include.conf.erb
+++ b/modules/router/templates/router_include.conf.erb
@@ -54,7 +54,7 @@ location ~ ^/performance/ {
 }
 
 # This list of URLS should be kept in sync with the POST-able routes in the
-# feedback application
+# feedback application: https://github.com/alphagov/feedback/blob/master/config/routes.rb#L13-L21
 location ~ ^/contact/govuk(/(|service-feedback|problem_reports|foi|page_improvements|email-survey-signup|assisted-digital-survey-feedback))?$ {
   limit_req zone=contact burst=4 nodelay;
   proxy_pass http://varnish;
