--- a/modules/govuk/templates/ckan/nginx.conf.erb
+++ b/modules/govuk/templates/ckan/nginx.conf.erb
@@ -24,6 +24,8 @@
 
     # Additional endpoints requested by users
     "/action/package_search",
+    "/action/package_show",
+    "/action/harvest_source_list",
   ]
 -%>
 
