Safelist format_autocomplete API endpoint

--- a/modules/govuk/templates/ckan/nginx.conf.erb
+++ b/modules/govuk/templates/ckan/nginx.conf.erb
@@ -22,6 +22,10 @@
     # Used for: ckan_v26_package_sync job
     "/action/package_show",
 
+    # Used by: datagovuk_publish
+    # Used for: determining filetype
+    "/2/util/resource/format_autocomplete",
+
     # Additional endpoints requested by users
     "/action/package_search",
     "/action/package_list",
