--- a/modules/router/templates/router_include.conf.erb
+++ b/modules/router/templates/router_include.conf.erb
@@ -79,6 +79,7 @@ location / {
 }
 
 error_page 400 /400.html;
+error_page 403 /403.html;
 error_page 404 401 /404.html;
 error_page 406 /406.html;
 error_page 410 /410.html;
@@ -95,6 +96,10 @@ error_page 429 /503.html;
 charset utf-8;
 
 location /400.html {
+  root /usr/share/nginx/www;
+  internal;
+}
+location /403.html {
   root /usr/share/nginx/www;
   internal;
 }
