Safelist the /harvestobject API endpoint

--- a/modules/govuk/templates/ckan/nginx.conf.erb
+++ b/modules/govuk/templates/ckan/nginx.conf.erb
@@ -26,6 +26,10 @@
     # Used for: determining filetype
     "/2/util/resource/format_autocomplete",
 
+    # Used by: datagovuk_find
+    # Used for: addtional metadata links for datasets
+    "/2/rest/harvestobject",
+
     # Additional endpoints requested by users
     "/action/package_search",
     "/action/package_list",
