Enable customising the check_period for an Icinga check
The default is 24x7, but I'm looking at making the Whitehall overdue
check only run in office hours on Staging and Integration, to avoid it
running when Whitehall might not be working.

--- a/modules/icinga/templates/service.erb
+++ b/modules/icinga/templates/service.erb
@@ -15,6 +15,9 @@ define service {
 <%- if @attempts_before_hard_state -%>
         max_check_attempts        <%= @attempts_before_hard_state %>
 <%- end -%>
+<%- if @check_period -%>
+        check_period              <%= @check_period %>
+<%- end -%>
 <%- if @notification_period -%>
         notification_period       <%= @notification_period %>
 <%- end -%>
