Prevent Jenkins rebooting during data sync jobs
This protects these jobs from Jenkins automatically
doing an unattended reboot and killing them. This
ensures the jobs complete, then Jenkins will reboot
after they're done.

--- a/modules/govuk_jenkins/templates/jobs/copy_data_from_staging_to_aws.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_from_staging_to_aws.yaml.erb
@@ -48,7 +48,7 @@
             set +e
 
             echo "Running Data Sync"
-            bash sync staging aws-staging
+            /usr/local/bin/with_reboot_lock bash sync staging aws-staging
             EXITCODE=$?
 
             exit $EXITCODE
