--- a/modules/govuk_jenkins/templates/jobs/copy_attachments_to_staging.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_attachments_to_staging.yaml.erb
@@ -35,7 +35,7 @@
             cd "${WORKSPACE}"
 
             echo "Syncing attachments"
-            JOBLIST=attachments bash sync production staging
+            JOBLIST=attachments /usr/local/bin/with_reboot_lock bash sync production staging
     publishers:
       - trigger-parameterized-builds:
         - project: Success_Passive_Check
