--- a/modules/govuk_jenkins/templates/jobs/copy_data_to_staging.yaml.erb
+++ b/modules/govuk_jenkins/templates/jobs/copy_data_to_staging.yaml.erb
@@ -50,7 +50,7 @@
             set +e
 
             echo "Running Data Sync"
-            bash sync production staging
+            /usr/local/bin/with_reboot_lock bash sync production staging
             EXITCODE=$?
 
             exit $EXITCODE
