--- a/modules/govuk_scripts/templates/govuk_node_list_aws.erb
+++ b/modules/govuk_scripts/templates/govuk_node_list_aws.erb
@@ -95,7 +95,7 @@ def get_hostname_by_id(instance_id):
     client = boto3.client('ec2', region_name=region)
     response = client.describe_instances(InstanceIds=[instance_id])
     key = 'PrivateDnsName'
-    host = response['Reservations'][0]['Instances'][0]['NetworkInterfaces'][0]
+    host = response['Reservations'][0]['Instances'][0]
 
     if not key in host:
         print("The instance attribute {} does not exist".format(key))
