Condense similar application dashboards
This condenses some of the application dashboards into a single
'generic' dashboard with a template variable, the aim being to
eventually move out the remaining custom behaviours into tailored
dashboards for the few apps that need them:

   - Some apps, like static, benefit from showing errors of other
apps that dependend upon it
   - Some apps, like finder-frontend, show memcached stats with a
specific 'instance prefix'

The docs URLs also vary for some applications e.g. 'smartanswers'
vs. 'smart-answers'. We could remove this link if it's not useful.

--- a/modules/grafana/templates/dashboards/application_dashboard_template.json.erb
+++ b/modules/grafana/templates/dashboards/application_dashboard_template.json.erb
@@ -1,12 +1,42 @@
 {
   "id": 29,
-  "title": "Application dashboard - <%= @app_name %>",
+  "title": "Application dashboard - <%= @title %>",
   "tags": [],
   "style": "dark",
   "timezone": "browser",
   "editable": true,
   "hideControls": false,
   "sharedCrosshair": false,
+  <% if $title == 'generic' %>
+    "templating": {
+      "list": [
+        {
+          "allValue": null,
+          "current": {
+            "tags": [],
+            "text": "asset-manager",
+            "value": "asset-manager"
+          },
+          "datasource": "Graphite",
+          "hide": 0,
+          "includeAll": false,
+          "label": null,
+          "multi": false,
+          "name": "Application",
+          "options": [],
+          "query": "*.processes-app-*",
+          "refresh": 1,
+          "regex": "/processes-app-(.*)/",
+          "sort": 0,
+          "tagValuesQuery": "",
+          "tags": [],
+          "tagsQuery": "",
+          "type": "query",
+          "useTags": false
+        }
+      ]
+    },
+  <% end %>
   "rows": [
     <% @panel_partials.each_with_index do |row, i| %>
       <%= ',' if i > 0 %> {
