Implement data scrubbing/sanitisation/filtering in govuk_env_sync.
Existing data sanitisation scripts can be added to the
`files/transformation_sql` directory in the govuk_env_sync Puppet
module. These are then referred to in arguments to the task resource and
passed to the govuk_env_sync shell script.

For now, a given govuk_env_sync task can only have one transformation
script, but that should suffice for all currently-known needs.

--- a/modules/govuk_env_sync/templates/govuk_env_sync_job.conf.erb
+++ b/modules/govuk_env_sync/templates/govuk_env_sync_job.conf.erb
@@ -5,3 +5,6 @@ temppath="<%= @temppath %>"
 database="<%= @database %>"
 url="<%= @url %>"
 path="<%= @path %>"
+<% if transformation_sql_filename != '' %>
+transformation_sql_file="<%= scope['govuk_env_sync::conf_dir'] %>/transformation_sql/<%= @transformation_sql_filename %>"
+<% end %>
